--- a/index.html
+++ b/index.html
@@ -5,8 +5,32 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Developer Me</title>
+    <!-- fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+
+    <!-- style -->
+    <link rel="stylesheet" href="style.css">
+
 </head>
 <body>
     
+   <section class="top-banner">
+        <div class="half_width">
+            <h1>Welcome To</h1>
+            <h1> <span class="orange-color">lorem Ipsum</span> World! </h1>
+
+            <h3>Lorem ipsum dolor sit amet.</h3>
+            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled</p>
+
+            <a class="link-button" href="https://www.linkedin.com/in/md-hasan-ali-928184b6/" target="_blank" >Hire Me</a>
+        </div>
+
+        <div  class="half_width">
+            <img src="images/jhankar.png" alt="">
+        </div>
+   </section>
+
 </body>
 </html>
