--- a/index.html
+++ b/index.html
@@ -16,12 +16,13 @@
 </head>
 <body>
     
-   <section class="top-banner">
+   <section class="top-banner flexible-content">
         <div class="half_width">
             <h1>Welcome To</h1>
             <h1> <span class="orange-color">lorem Ipsum</span> World! </h1>
 
             <h3>Lorem ipsum dolor sit amet.</h3>
+
             <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled</p>
 
             <a class="link-button" href="https://www.linkedin.com/in/md-hasan-ali-928184b6/" target="_blank" >Hire Me</a>
@@ -32,17 +33,40 @@
         </div>
    </section>
 
-   <section class="dream-big">
+   <section class="dream-big flexible-content">
        <div class="half_width">
            <img src="images/jhankar2.png" alt="">
        </div> 
        <div class="half_width">
            <h1>Dream Big </h1>
-           <h2>Become a web developer</h2>
+           <h3>Become a web developer</h3>
            <p>I already learned the basic HTML and CSS. I can build any simple website. I can even teach my grandma how to make simple website. My goal is to build 3 websites and learn advanced topics.</p>
            <a class="link-button" target="_blank" href="#">Download CV</a>
        </div> 
    </section>
 
+   <section class="experience">
+       <h1>Experiences</h1>
+       <div class="exp-box flexible-content">
+        <div id="box-1" class="box">
+            <h2>Full Stack Web Developer</h2>
+            <h3 class="orange-color">2021-Present | Pro Level Developer</h3>
+            <p>I am the master of HTML, CSS and Javascript. I know everything needed to make a website function, efficient. I didn't stop with the web. I went beyond with most popular Javascript framework called Vue JS. I even know the deployment, server and security. I will give you 100% web solution.</p>
+        </div>
+ 
+        <div id="box-2" class="box">
+             <h2>Full Stack Web Developer</h2>
+             <h3 class="orange-color">2021-Present | Pro Level Developer</h3>
+             <p>I am the master of HTML, CSS and Javascript. I know everything needed to make a website function, efficient. I didn't stop with the web. I went beyond with most popular Javascript framework called Vue JS. I even know the deployment, server and security. I will give you 100% web solution.</p>
+         </div>
+       </div>
+       
+
+   </section>
+
+   <footer>
+       <p>© Copyright 2022.All Right Reserved, Designed by Md. Hasan Ali</p>
+   </footer>
+
 </body>
-</html>
+</html>git
