Finall Commit website

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
     
    <section class="top-banner flexible-content">
         <div class="half_width">
-            <h1>Welcome To</h1>
-            <h1> <span class="orange-color">lorem Ipsum</span> World! </h1>
+            <h1>HI ! I'M </h1>
+            <h1> <span class="orange-color"> A Web </span> Developer. </h1>
 
             <h3>Lorem ipsum dolor sit amet.</h3>
 
@@ -29,13 +29,13 @@
         </div>
 
         <div  class="half_width">
-            <img src="images/jhankar.png" alt="">
+            <img src="images/hasan.png" alt="">
         </div>
    </section>
 
    <section class="dream-big flexible-content">
        <div class="half_width">
-           <img src="images/jhankar2.png" alt="">
+           <img src="images/hasan2.png" alt="">
        </div> 
        <div class="half_width">
            <h1>Dream Big </h1>
